--- a/jQuery/example-6.html
+++ b/jQuery/example-6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Example 6 - without Arguments</title>
+	<title>Example 6 - throw new Error goes to Window level</title>
 	<script src="jquery-1.11.1.js"></script>
 	<script>
 		function one() {		    
