--- a/jQuery/example-7.html
+++ b/jQuery/example-7.html
@@ -52,6 +52,9 @@
 	         if (x === 'abc') {
 	        	console.log('abc');
 	        }
+	        /* retuns a promise even if nothing is explicitly returned. In this case, no argument
+	           is passed.
+	         */
 	    }).then(function (x) {
 	        if (x === undefined) {
 	        	console.log('I have got nothing');
