--- a/q/example-7.html
+++ b/q/example-7.html
@@ -18,9 +18,9 @@
 			    return deferred.promise;
 		}
 
-		/*Q.all([saveToDisk(), saveToCloud()]).done(function (response) {
+		Q.all([saveToDisk(), saveToCloud()]).done(function (response) {
 		    console.log(response[0] + " --------- " + response[1]);
-		});*/
+		});
 
 		/*
 		The all function returns a promise for an array of values. When this promise is fulfilled, the array contains the fulfillment values of the original promises, in the same order as those promises. If one of the given promises is rejected, the returned promise is immediately rejected, not waiting for the rest of the batch. If you want to wait for all of the promises to either be fulfilled or rejected, you can use allSettled.
