Examples are updated

--- a/jQuery/example-2.html
+++ b/jQuery/example-2.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Example 2 - Reject</title>
+	<title>Example 1 - Reject</title>
 	<script src="jquery-1.11.1.js"></script>
 	<script>
 		function myPromise() {
 			var deferred = $.Deferred();
 
 			setTimeout(function () {
-				//Reject a Deferred object and call any failCallbacks with the given args.
 				deferred.reject('I am rejecting your love.');
 			}, 1000);
 
@@ -18,6 +17,7 @@
 		myPromise().then(function (response) {
 			console.log(response);
 		}, function (reason) {
+			console.log("here");
 			console.log(reason);
 		});
 	</script>
