--- a/jQuery/example-4.html
+++ b/jQuery/example-4.html
@@ -6,7 +6,7 @@
 	<script>
 		function one(arg) {
 		    
-		    var deferred = $.Deferred();
+		    var deferred = $.Deferred(); // Don't worry yet what this is until after you understand the flow
 		    
 		    console.log("Starting one's ajax with arg: " + arg);
 		    $.ajax( {
