--- a/jQuery/example-10.html
+++ b/jQuery/example-10.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Example 10 - Simple jQuery and Q differences</title>
+	<title>Example 10 - Resolve</title>
 	<script src="jquery-1.11.1.js"></script>
 	<script>
 	/*
